Add a new endpoint
