# swagger_server/controllers/news_controller.py
@@ -1,5 +1,6 @@
 import connexion
 from swagger_server.models.api_response import ApiResponse
+from swagger_server.models.news import News
 from swagger_server.models.news_list import NewsList
 from datetime import date, datetime
 from typing import List, Dict
@@ -13,5 +14,17 @@ def news_to_be_published_get():
     Return a list of news.
 
     :rtype: NewsList
+    """
+    return 'do some magic!'
+
+
+def verify_news(url):
+    """
+    Send a news to be classify
+    Send a news to be classify
+    :param url: URL of site
+    :type url: str
+
+    :rtype: News
     """
     return 'do some magic!'
