# swagger_server/models/news.py
@@ -13,7 +13,7 @@ class News(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, title: str=None, sub_title: str=None, content: str=None, url: str=None, tipo: bool=False, site: Site=None):
+    def __init__(self, title: str=None, sub_title: str=None, content: str=None, url: str=None, tipo: bool=None, accuracy: float=None, site: Site=None):
         """
         News - a model defined in Swagger
 
@@ -27,6 +27,8 @@ class News(Model):
         :type url: str
         :param tipo: The tipo of this News.
         :type tipo: bool
+        :param accuracy: The accuracy of this News.
+        :type accuracy: float
         :param site: The site of this News.
         :type site: Site
         """
@@ -36,6 +38,7 @@ class News(Model):
             'content': str,
             'url': str,
             'tipo': bool,
+            'accuracy': float,
             'site': Site
         }
 
@@ -45,6 +48,7 @@ class News(Model):
             'content': 'content',
             'url': 'url',
             'tipo': 'tipo',
+            'accuracy': 'accuracy',
             'site': 'site'
         }
 
@@ -53,6 +57,7 @@ class News(Model):
         self._content = content
         self._url = url
         self._tipo = tipo
+        self._accuracy = accuracy
         self._site = site
 
     @classmethod
@@ -155,7 +160,6 @@ class News(Model):
     def tipo(self) -> bool:
         """
         Gets the tipo of this News.
-        Class of news
 
         :return: The tipo of this News.
         :rtype: bool
@@ -166,13 +170,35 @@ class News(Model):
     def tipo(self, tipo: bool):
         """
         Sets the tipo of this News.
-        Class of news
 
         :param tipo: The tipo of this News.
         :type tipo: bool
         """
 
         self._tipo = tipo
+
+    @property
+    def accuracy(self) -> float:
+        """
+        Gets the accuracy of this News.
+        Class of news
+
+        :return: The accuracy of this News.
+        :rtype: float
+        """
+        return self._accuracy
+
+    @accuracy.setter
+    def accuracy(self, accuracy: float):
+        """
+        Sets the accuracy of this News.
+        Class of news
+
+        :param accuracy: The accuracy of this News.
+        :type accuracy: float
+        """
+
+        self._accuracy = accuracy
 
     @property
     def site(self) -> Site:
